# rentomatic

./: README.md  pyproject.toml
src/: main.py
src/domain/: room.py
src/domain/entities/: room.py  user.py
src/infrastructure/: memory_repository.py
src/infrastructure/persistence/: memory_repository.py  user_repository.py
src/serializers/: room.py
src/use_cases/: rooms_use_case.py
src/use_cases/dtos/room/: create_room_dto.py  room_dto.py
src/use_cases/dtos/user/: create_user_dto.py  user_dto.py
src/use_cases/interfaces/: repository_interface.py
src/use_cases/services/: rooms_service.py  user_service.py
src/use_cases/services/interfaces/: repository_interface.py  room_repository_interface.py  user_repository_interface.py  user_service_interface.py
tests/domain/: test_room.py
